src/components/menu/Menu.css
.menu {
  position: fixed;
  top: -33px;
  left: 20px;
  z-index: 999;
  width: 52px;
  height: 52px;
  background-color: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(5px);
  border-radius: 20%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: transform 0.3s ease;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  margin-top: 50px;
}

.menu.open {
  transform: rotate(90deg);
  background-color: rgba(255, 255, 255, 0.9);
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
}

.menu:before,
.menu:after {
  content: "";
  position: absolute;
  background-color: #fff;
  width: 26px;
  height: 2px;
  transition: transform 0.3s ease;
}

.menu:before {
  transform: translateY(-8px);
}

.menu:after {
  transform: translateY(8px);
}

.menu.open:before,
.menu.open:after {
  transform: rotate(90deg);
  background-color: #333;
}

.menu-options {
  margin-top: 50px;
  position: fixed;
  top: 90px;
  left: 20px;
  display: flex;
  flex-direction: column;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.3s ease;
  z-index: 998;
  color: white;
  background-color: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(5px);
  border-radius: 20px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  width: 97px;
  padding-left: 20px;
}

.menu-option {
  text-decoration: none;
  color: white;
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
}

.menu-option.active {
  font-weight: thin;
  position: relative;
}

.menu-option.active:before {
  content: "";
  position: absolute;
  top: 50%;
  left: -10px;
  transform: translateY(-50%);
  width: 4px;
  height: 27%;
  border-radius: 20px;
  background-color: rgba(255, 255, 255, 0.9);
}

.menu.open ~ .menu-options {
  opacity: 1;
  pointer-events: auto;
}

.fade-in {
  opacity: 1;
  transform: translateY(0);
  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
}

@media screen and (max-width: 768px) {
  .menu {
      left: 10px;
  }
}

